--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+html {
+    font-size: min(3vw, 3vh);
+}
+
 html, body {
     font-family: "Roboto Serif", serif;
+    margin: 0;
+    padding: 0;
+}
+
+#main-div {
+    margin: auto;
+    padding: 0.25em 1em 0.25em 1em;
+    box-sizing: border-box;
+    width: min(100vw, 100vh);
+}
+
+h1 {
+    text-align: center;
+    font-size: 4em;
+    margin: 0.1em;
+    padding: 0.1em;
 }
