--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 
 #main-div {
     margin: auto;
-    padding: 0.25em 1em 0.25em 1em;
+    padding: 0.25em 1.5em 0.25em 1.5em;
     box-sizing: border-box;
     width: min(100vw, 100vh);
 }
@@ -22,6 +22,6 @@ h1 {
     padding: 0.1em;
 }
 
-#joe-miner-roundabout-image {
+#joe-miner-roundabout-image, #joe-miner-roundabout-flyer {
     width: 100%;
 }
